--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>Thomas Prince</h1>
-    <a href="violin.html">Performance Violin CV</a>
+    <a href="music.html">Music</a>
+    <a href="engineering.html">Engineering</a>
 </body>
 </html>
