--- a/engineering/engineering.html
+++ b/engineering/engineering.html
@@ -5,8 +5,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Thomas Prince</h1>
-    <a href="music/performance/music.html">Music</a>
-    <a href="engineering/engineering.html">Engineering</a>
+    <a href="">Home</a>
 </body>
 </html>
